MCR-3352 add explicit super class parameter to instantiation method and use more capable API where possible